@@ -7,11 +7,7 @@
     <groupId>com.powernode</groupId>
     <artifactId>mybatis-004-web</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <packaging>jar</packaging>
-
-    <name>mybatis-004-web Maven Webapp</name>
-    <!-- FIXME change it to the project's website -->
-    <url>http://www.example.com</url>
+    <packaging>war</packaging>
 
     <properties>
         <maven.compiler.source>21</maven.compiler.source>
@@ -19,14 +15,10 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
-    <dependencies>
-        <!-- web 依賴 -->
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-            <version>3.3.2</version>
-        </dependency>
+    <name>mybatis-004-web</name>
+    <url>http://maven.apache.org</url>
 
+    <dependencies>
         <!-- mybatis 依賴 -->
         <dependency>
             <groupId>org.mybatis</groupId>
@@ -41,6 +33,14 @@
             <version>42.7.3</version>
         </dependency>
 
+        <!-- junit 依賴 -->
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.13.2</version>
+            <scope>test</scope>
+        </dependency>
+
         <!-- 引入 logback 的依賴，這個日誌框架實現了 slf4j 規範 -->
         <dependency>
             <groupId>ch.qos.logback</groupId>
@@ -49,5 +49,26 @@
             <scope>test</scope>
         </dependency>
 
+        <!-- servlet 依賴 -->
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>4.0.1</version>
+        </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>21</source>
+                    <target>21</target>
+                    <compilerArgs>--enable-preview</compilerArgs>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
 </project>
